--- a/templates/includes/history.hbs
+++ b/templates/includes/history.hbs
@@ -19,7 +19,9 @@ defaults:
 				</div>
 				<div>
 					<div class="show">
-						<img src="/_gh_pages/assets/images/projects/{{projects.0.tile}}">
+						<a href="#">
+							<img src="/assets/images/projects/{{projects.0.tile}}">
+						</a>
 					</div>
 					<div class="hide">
 						{{#each projects}}
