--- a/theme/custom/jpc-other.less
+++ b/theme/custom/jpc-other.less
@@ -428,3 +428,10 @@ a.list-group-item {
     border-color: #000;
   }
 }
+
+// Section - backgrounds ======================================================
+
+/*#intro {
+  background-image: url(../images/intro.jpg);
+  background-size: cover;
+}*/
